# SplatSim

./: .gitignore  .gitmodules  README.md  create_gif.py  environment.yml  generate_html.py  get_videos.py  labels.npy  process_results.py  render.py  render_fk_all_highres.py  render_fk_all_highres_withvis.py  render_fk_any_robot.py  requirements.txt  setup.py  utils_fk.py
SplatSim/agents/: policy_agent_6DOF.py  replay_trajectory_agent.py  slider_interface_agent.py
SplatSim/robots/: custom_gripper.py  sim_robot_pybullet_assembly.py  sim_robot_pybullet_orange_on_plate.py  sim_robot_pybullet_splat_servoing.py  ur.py  ur_pybullet.py
configs/: folder_configs.yaml  trajectory_configs.yaml
configs/object_configs/: objects.yaml
data/labels_path/: 2025-08-01-ur5_robot_1069imgs_labels.npy  robot_iphone_labels.npy
gaussian_renderer/: __init__.py  __init_backup__.py
gello_software/: MJMODEL.TXT  arena.xml  combine_images.sh  create_servoing_gifs.sh  gripper_test.py  mjmodel.xml  pkl_analysis.py  plot_pe.py  reduced_images.sh  test.txt  trajectory.npy
gello_software/Assets/blocks/: concave.urdf  cube.urdf  cylinder.urdf  potato_chip_1_v1.urdf  triangle.urdf
gello_software/experiments/: launch_nodes.py  run_env_policy.py  run_env_sim.py
gello_software/gello/agents/: gello_agent.py  (+3 more)
gello_software/other_scripts/: dhparameters.py
gello_software/ur_rtde/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  setup.py
gello_software/ur_rtde/ci/: build-boost.sh  build-wheels.sh  gitlab-ci-windows.yml
gello_software/ur_rtde/ci/.vol/cb-series/.urcontrol/: safety.conf.UR5
gello_software/ur_rtde/cmake/: FindPythonLibsNew.cmake  pybind11Config.cmake  ur_rtdeBuildConfig.cmake.in
gello_software/ur_rtde/debian/: changelog  librtde-dev.install  librtde.lintian-overrides
gello_software/ur_rtde/doc/: CMakeLists.txt  doxyfile.in  index.rst
gello_software/ur_rtde/doc/_static/: robotiq_gripper_control.py  robotiq_preamble.py
gello_software/ur_rtde/doc/api/: api.rst
gello_software/ur_rtde/doc/faq/: faq.rst
gello_software/ur_rtde/doc/installation/: installation.rst
gello_software/ur_rtde/doc/introduction/: introduction.rst
gello_software/ur_rtde/examples/cpp/: forcemode_example.cpp  move_path_async_example.cpp  movej_path_with_blend_example.cpp  realtime_control_example.cpp  record_data_example.cpp  servoj_example.cpp
gello_software/ur_rtde/examples/py/: forcemode_example.py  move_until_contact.py  movel_path_with_blend_example.py  realtime_control_example.py  record_data_example.py  speedj_example.py
gello_software/ur_rtde/include/ur_rtde/: dashboard_enums.h  robot_state.h  rtde.h  rtde_control_interface.h  rtde_io_interface.h  rtde_receive_interface.h
gello_software/ur_rtde/include/urcl/: tcp_server.h  tcp_socket.h
gello_software/ur_rtde/scripts/: rtde_control.script
gello_software/ur_rtde/src/: dashboard_enums.cpp  robotiq_gripper.cpp  rtde.cpp  rtde_python_bindings.cpp  rtde_receive_interface.cpp
gello_software/ur_rtde/src/urcl/: default_log_handler.cpp  tcp_server.cpp
gello_software/ur_rtde/test/: CMakeLists.txt  main.cpp
labels_path/: robot_jenny_labels.npy
object_configs/: objects.yaml
pybullet-playground_2/: inverse_kinematics.py
pybullet-playground_2/urdf/: sisbot.urdf  sisbot_pusher.urdf
pybullet_robot_server/src/: main.py  zmq_robot_client.py
scripts/: articulated_robot_pipeline.py  create_object_scan_for_splat.py  launch_camera_nodes.py  launch_nodes.py  quick_run.py  run_env.py  run_env_servo.py  run_env_sim.py  test_find_robot_transformation.py
splat/: README.md  compare_pcd.py  cube_test.py  forward.py  generate_deformable_object_pcd.py  generate_object_pcd.py  get_segmented.py  joint_trajectory.npy  knn_links.py  knn_splat.py  labels.npy  object_mesh_pcd.py  object_splat_scan.py  object_trajectory.npy  object_trajectory.py  object_trajectory_real.py  robot_gripper_pcd.py  sphere.urdf  test.py  test2.py  utils.py
splat/articulated_objects/: articulated_object_pipeline.py  articulated_robot_pipeline.py  glasses_labels.npy  objects.yaml  robot_iphone_labels.npy  robot_jenny_labels.npy
splat/imagescraper/: scraper.py
splat/object_pcds/: cloth.ply  plastic_apple.ply  plastic_banana.ply
splat/trajectory_data/: joint_positions.npy
splatsim/agents/: gello_agent.py  policy_agent.py  policy_agent_6DOF.py  replay_trajectory_agent.py  slider_interface_agent.py
splatsim/robots/: panda.py  robot.py  sim_robot.py  sim_robot_pybullet.py  sim_robot_pybullet_apple_on_plate.py  sim_robot_pybullet_apple_search.py  sim_robot_pybullet_assembly.py  sim_robot_pybullet_banana_on_plate.py  sim_robot_pybullet_base.py  sim_robot_pybullet_cup.py  sim_robot_pybullet_object_on_plate.py  sim_robot_pybullet_orange_on_plate.py  sim_robot_pybullet_pepper_pick_planner.py  sim_robot_pybullet_pick_place_planner.py  sim_robot_pybullet_splat.py  sim_robot_pybullet_splat_6DOF.py  sim_robot_pybullet_splat_servoing.py  ur.py
splatsim/utils/: cameras.py  robot_splat_render_utils.py  transform_utils.py
submodules/gaussian-splatting-wrapper/: setup.py
submodules/pybullet-playground-wrapper/: setup.py
to_delete/: generate_gt_pcd.py  labels_iphone.npy  reduce_splat_size.py  render.py  render_fk_all_highres.py  render_fk_all_highres_withvis.py  render_fk_any_robot.py  render_fk_ur.py  test_cams.py  train.py  utils_fk.py
to_delete/gaussian_renderer/: __init__.py  __init_backup__.py
to_delete/gaussian_splatting/: environment.yml  full_eval.py  render.py  train.py
to_delete/gello_software/: MJDATA.TXT  environment.yaml  requirements.txt  setup.py  test.py
to_delete/gello_software/DynamixelSDK/ros/dynamixel_sdk/: CMakeLists.txt  package.xml
to_delete/gello_software/ur_rtde/examples/cpp/: CMakeLists.txt  contact_detection_example.cpp  io_example.cpp  jog_example.cpp  move_async_example.cpp  move_until_contact.cpp  robotiq_gripper_example.cpp  speedj_example.cpp
to_delete/pybullet_robot_server/: README.md  requirements.txt
to_delete/scene/: __init__.py  dataset_readers.py  gaussian_model.py
utils/: camera_utils.py  robot_splat_render_utils.py
(+197 files in other folders)
